courses/430_programming-languages/assignment-6/tests/error/hw5_error08.nex
fun f() : bool
{
   return false;
}
print "should not get here:n";
1 / 0;
   print (f() + 1);
